--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=springbootWebFlux
 spring.data.mongodb.uri= mongodb://localhost:27017/spring_boot
 spring.thymeleaf.reactive.max-chunk-size=1024
 spring.thymeleaf.reactive.chunked-mode-view-names=listar-chunked,*chunked*
+
+config.uploads.path=C://workspace//spring-boot-webflux//uploads//
